Chore: Remove documentação de deploy do repositório
- Remove arquivos de documentação técnica de hospedagem
- Remove guias de deploy e acesso à VM
- Remove configurações do Claude Code
- Adiciona arquivos ao .gitignore para manter apenas localmente
- Documentação sensível mantida apenas no ambiente local

--- a/.gitignore
+++ b/.gitignore
@@ -49,3 +49,12 @@ Thumbs.db
 
 # Cache
 .cache/
+
+# Documentation (deployment guides - keep local only)
+docs/ESPECIFICACOES_TECNICAS_HOSPEDAGEM.md
+docs/GUIA_DEPLOY_GRATUITO.md
+docs/RESUMO_REQUISITOS.md
+docs/GUIA_ACESSO_VM.md
+
+# Claude Code settings
+.claude/
