Implementa sistema de persistencia e melhora notificacoes por email
- Adiciona persistencia de historico de mudancas (data/historico.json)
- Implementa persistencia de hash entre reinicializacoes (data/hash_anterior.txt)
- Novo endpoint GET /api/atividades para feed de mudancas
- Emails agora incluem preview do conteudo alterado
- Simplifica interface do feed de atividades no dashboard
- Remove animacoes de hover que causavam pulsacao visual
- Adiciona script keep-alive.sh para Oracle Cloud Free Tier
- Atualiza .gitignore para novos arquivos de dados

--- a/.gitignore
+++ b/.gitignore
@@ -40,6 +40,8 @@ config/config.json
 
 # Project specific - Data files (user data)
 data/subscribers.json
+data/historico.json
+data/hash_anterior.txt
 
 # Project specific - Scripts with credentials
 scripts/duckdns-update.sh
